Update: Standardize tourism and travel-transportation pages structure and styling, fix icons and head sections

--- a/home.html
+++ b/home.html
@@ -346,9 +346,9 @@
 <p class="mt-4 text-slate-600 text-lg font-normal leading-relaxed">
                   Request a demo or contact us to learn more about how NTT DATA Spain can help your business succeed.
                 </p>
-<button class="mt-10 flex min-w-[180px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-6 @[480px]:h-14 @[480px]:px-8 bg-[#1672ce] text-white text-base @[480px]:text-lg font-semibold leading-normal tracking-tight shadow-lg hover:bg-sky-600 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-[#1672ce] transition-transform duration-150 ease-in-out hover:scale-105 mx-auto">
+<a href="contactus.html" class="mt-10 flex min-w-[180px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-6 @[480px]:h-14 @[480px]:px-8 bg-[#1672ce] text-white text-base @[480px]:text-lg font-semibold leading-normal tracking-tight shadow-lg hover:bg-sky-600 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-[#1672ce] transition-transform duration-150 ease-in-out hover:scale-105 mx-auto hover:no-underline">
 <span class="truncate">Contact Us</span>
-</button>
+</a>
 </div>
 </div>
 </section>
