--- a/industries/travel-transportation-logistics/services/index.html
+++ b/industries/travel-transportation-logistics/services/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <link href="https://fonts.gstatic.com/" rel="preconnect" crossorigin/>
     <link href="https://fonts.googleapis.com/css2?display=swap&family=Noto+Sans%3Awght%40400%3B500%3B700%3B900&family=Work+Sans%3Awght%40400%3B500%3B600%3B700%3B800%3B900" rel="stylesheet" as="style" onload="this.rel='stylesheet'"/>
-    <title>Transportation Services Solutions - NTT DATA Demo Center</title>
+    <title>Transportation Services Processes - NTT DATA Demo Center</title>
     <link href="data:image/x-icon;base64," rel="icon" type="image/x-icon"/>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
@@ -63,28 +63,28 @@
                                 </li>
                             </ol>
                         </nav>
-                        <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold leading-tight tracking-tight">Transportation Services Solutions</h1>
-                        <p class="text-xl text-slate-300 max-w-3xl">Enhance your transportation services with digital solutions that improve efficiency, reliability, and customer satisfaction.</p>
+                        <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold leading-tight tracking-tight">Services</h1>
+                        <p class="text-xl text-slate-300 max-w-3xl">Enhance your services with digital solutions that improve efficiency, reliability, and customer satisfaction along the following processes:</p>
                     </div>
                 </div>
             </section>
 
-            <!-- Solutions Grid -->
+            <!-- Processes Grid -->
             <section class="py-12 sm:py-16 md:py-20 px-6 sm:px-10">
                 <div class="max-w-6xl mx-auto">
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                        <!-- Solution Card 1 -->
+                        <!-- Process Card 1 -->
                         <div class="flex flex-col gap-4 rounded-xl border border-slate-200 bg-white p-6 shadow-lg hover:shadow-xl transition-shadow duration-300">
                             <div class="text-[#1672ce] h-10 w-10 flex items-center justify-center bg-sky-100 rounded-full">
                                 <span class="material-symbols-outlined">payments</span>
                             </div>
                             <div>
-                                <h3 class="text-slate-900 text-lg font-semibold leading-tight">Payment Solutions</h3>
+                                <h3 class="text-slate-900 text-lg font-semibold leading-tight">Payment</h3>
                                 <p class="text-slate-600 text-sm font-normal leading-normal mt-2">Integrated payment systems for seamless transactions across all service touchpoints.</p>
                             </div>
                         </div>
 
-                        <!-- Solution Card 2 -->
+                        <!-- Process Card 2 -->
                         <div class="flex flex-col gap-4 rounded-xl border border-slate-200 bg-white p-6 shadow-lg hover:shadow-xl transition-shadow duration-300">
                             <div class="text-[#1672ce] h-10 w-10 flex items-center justify-center bg-sky-100 rounded-full">
                                 <span class="material-symbols-outlined">schedule</span>
@@ -95,7 +95,7 @@
                             </div>
                         </div>
 
-                        <!-- Solution Card 3 -->
+                        <!-- Process Card 3 -->
                         <div class="flex flex-col gap-4 rounded-xl border border-slate-200 bg-white p-6 shadow-lg hover:shadow-xl transition-shadow duration-300">
                             <div class="text-[#1672ce] h-10 w-10 flex items-center justify-center bg-sky-100 rounded-full">
                                 <span class="material-symbols-outlined">support_agent</span>
