--- a/industries/travel-transportation-logistics/travel-transportation/index.html
+++ b/industries/travel-transportation-logistics/travel-transportation/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <link href="https://fonts.gstatic.com/" rel="preconnect" crossorigin/>
     <link href="https://fonts.googleapis.com/css2?display=swap&family=Noto+Sans%3Awght%40400%3B500%3B700%3B900&family=Work+Sans%3Awght%40400%3B500%3B600%3B700%3B800%3B900" rel="stylesheet" as="style" onload="this.rel='stylesheet'"/>
-    <title>Travel & Transportation Solutions - NTT DATA Demo Center</title>
+    <title>Travel & Transportation Processes - NTT DATA Demo Center</title>
     <link href="data:image/x-icon;base64," rel="icon" type="image/x-icon"/>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
@@ -63,7 +63,7 @@
                                 </li>
                             </ol>
                         </nav>
-                        <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold leading-tight tracking-tight">Travel & Transportation Solutions</h1>
+                        <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold leading-tight tracking-tight">Travel & Transportation</h1>
                         <p class="text-xl text-slate-300 max-w-3xl">Optimize your transportation operations with advanced digital solutions that enhance efficiency and passenger experience through these key processes:</p>
                     </div>
                 </div>
