--- a/processes/manufacturing-cpg/manufacturing/smart-manufacturing.html
+++ b/processes/manufacturing-cpg/manufacturing/smart-manufacturing.html
@@ -140,15 +140,17 @@
                     <h2 class="text-slate-900 text-3xl sm:text-4xl font-bold leading-tight tracking-tight mb-8">Success Stories</h2>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                         <!-- Success Story Card 1 -->
-                        <div class="flex flex-col gap-4 rounded-xl border border-slate-200 bg-white p-6 shadow-lg hover:shadow-xl transition-shadow duration-300">
-                            <div class="h-48 rounded-lg overflow-hidden">
-                                <img src="../../../images/processes/manufacturing/automotive-success.jpg" alt="Automotive manufacturing plant" class="w-full h-full object-cover"/>
+                        <a href="../../../success-stories/automotive-manufacturing-success.html" class="block">
+                            <div class="flex flex-col gap-4 rounded-xl border border-slate-200 bg-white p-6 shadow-lg hover:shadow-xl transition-shadow duration-300">
+                                <div class="h-48 rounded-lg overflow-hidden">
+                                    <img src="../../../images/processes/manufacturing/automotive-success.jpg" alt="Automotive manufacturing plant" class="w-full h-full object-cover"/>
+                                </div>
+                                <div>
+                                    <h3 class="text-slate-900 text-lg font-semibold leading-tight">Global Automotive Manufacturer</h3>
+                                    <p class="text-slate-600 text-sm font-normal leading-normal mt-2">Implemented smart manufacturing process resulting in 30% efficiency improvement and 25% reduction in downtime.</p>
+                                </div>
                             </div>
-                            <div>
-                                <h3 class="text-slate-900 text-lg font-semibold leading-tight">Global Automotive Manufacturer</h3>
-                                <p class="text-slate-600 text-sm font-normal leading-normal mt-2">Implemented smart manufacturing process resulting in 30% efficiency improvement and 25% reduction in downtime.</p>
-                            </div>
-                        </div>
+                        </a>
 
                         <!-- Success Story Card 2 -->
                         <div class="flex flex-col gap-4 rounded-xl border border-slate-200 bg-white p-6 shadow-lg hover:shadow-xl transition-shadow duration-300">
