refactor: move inline styles to main.css

--- a/success-stories/automotive-manufacturing-success.html
+++ b/success-stories/automotive-manufacturing-success.html
@@ -32,9 +32,9 @@
 
         <main class="flex-1">
             <!-- Hero Section -->
-            <div class="relative h-[60vh] min-h-[500px] bg-slate-900">
-                <img src="../images/processes/manufacturing/automotive-success.jpg" alt="Automotive manufacturing plant" class="absolute inset-0 w-full h-full object-cover opacity-40"/>
-                <div class="relative h-full flex items-center">
+            <div class="hero-section">
+                <img src="../images/processes/manufacturing/automotive-success.jpg" alt="Automotive manufacturing plant"/>
+                <div class="content">
                     <div class="max-w-6xl mx-auto px-6 sm:px-10 w-full">
                         <div class="max-w-3xl">
                             <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold text-white leading-tight tracking-tight mb-6">Global Automotive Manufacturer Transformation</h1>
@@ -48,7 +48,7 @@
             <section class="py-16 px-6 sm:px-10">
                 <div class="max-w-6xl mx-auto">
                     <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
-                        <div class="rounded-2xl overflow-hidden lg:h-96">
+                        <div class="rounded-2xl overflow-hidden section-image">
                             <img src="../images/processes/manufacturing/automotive-plant.jpg" alt="Automotive assembly line" class="w-full h-full object-cover"/>
                         </div>
                         <div class="flex flex-col gap-6">
@@ -75,7 +75,7 @@
                                 <p>A digital twin of the entire manufacturing process was created, enabling simulation and optimization of production parameters in real-time, while smart inventory management ensured optimal stock levels and timely replenishment.</p>
                             </div>
                         </div>
-                        <div class="rounded-2xl overflow-hidden lg:h-96">
+                        <div class="rounded-2xl overflow-hidden section-image">
                             <img src="../images/processes/manufacturing/smart-factory.jpg" alt="Smart factory implementation" class="w-full h-full object-cover"/>
                         </div>
                     </div>
