--- a/processes/manufacturing-cpg/manufacturing/smart-manufacturing.html
+++ b/processes/manufacturing-cpg/manufacturing/smart-manufacturing.html
@@ -45,25 +45,25 @@
                                 </li>
                                 <li>
                                     <div class="flex items-center">
-                                        <span class="material-symbols-outlined text-slate-400 mx-1" style="font-size: 1.25rem;">chevron_right</span>
+                                        <span class="material-symbols-outlined text-slate-400 mx-1 breadcrumb-chevron">chevron_right</span>
                                         <a href="../../../industries/index.html" class="ml-1 text-sm font-medium text-slate-200 hover:text-white transition-colors">Industries</a>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="flex items-center">
-                                        <span class="material-symbols-outlined text-slate-400 mx-1" style="font-size: 1.25rem;">chevron_right</span>
+                                        <span class="material-symbols-outlined text-slate-400 mx-1 breadcrumb-chevron">chevron_right</span>
                                         <a href="../../../industries/manufacturing-cpg/index.html" class="ml-1 text-sm font-medium text-slate-200 hover:text-white transition-colors">Manufacturing & CPG</a>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="flex items-center">
-                                        <span class="material-symbols-outlined text-slate-400 mx-1" style="font-size: 1.25rem;">chevron_right</span>
+                                        <span class="material-symbols-outlined text-slate-400 mx-1 breadcrumb-chevron">chevron_right</span>
                                         <a href="../../../industries/manufacturing-cpg/manufacturing/index.html" class="ml-1 text-sm font-medium text-slate-200 hover:text-white transition-colors">Manufacturing</a>
                                     </div>
                                 </li>
                                 <li aria-current="page">
                                     <div class="flex items-center">
-                                        <span class="material-symbols-outlined text-slate-400 mx-1" style="font-size: 1.25rem;">chevron_right</span>
+                                        <span class="material-symbols-outlined text-slate-400 mx-1 breadcrumb-chevron">chevron_right</span>
                                         <span class="ml-1 text-sm font-medium text-slate-400">Smart Manufacturing Process</span>
                                     </div>
                                 </li>
