feat: update typography to use Noto Serif for titles

--- a/success-stories/automotive-manufacturing-success.html
+++ b/success-stories/automotive-manufacturing-success.html
@@ -37,7 +37,7 @@
                 <div class="content">
                     <div class="max-w-6xl mx-auto px-6 sm:px-10 w-full">
                         <div class="max-w-3xl">
-                            <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold text-white leading-tight tracking-tight mb-6">Global Automotive Manufacturer Transformation</h1>
+                            <h1 class="text-4xl sm:text-5xl md:text-6xl page-title text-white leading-tight tracking-tight mb-6">Global Automotive Manufacturer Transformation</h1>
                             <p class="text-xl text-slate-200">How a leading automotive manufacturer achieved unprecedented efficiency improvements through smart manufacturing implementation.</p>
                         </div>
                     </div>
@@ -52,7 +52,7 @@
                             <img src="../images/processes/manufacturing/automotive-plant.jpg" alt="Automotive assembly line" class="w-full h-full object-cover"/>
                         </div>
                         <div class="flex flex-col gap-6">
-                            <h2 class="text-3xl font-bold text-slate-900">The Challenge</h2>
+                            <h2 class="text-3xl section-title text-slate-900">The Challenge</h2>
                             <div class="prose text-slate-600">
                                 <p>The automotive manufacturer was facing increasing pressure to improve production efficiency while maintaining the highest quality standards in an increasingly competitive market. Their existing manufacturing processes were largely manual, leading to inconsistent quality and significant downtime.</p>
                                 <p>With multiple production lines across several facilities, they needed a solution that could standardize operations, reduce human error, and provide real-time insights into their manufacturing processes.</p>
@@ -68,7 +68,7 @@
                 <div class="max-w-6xl mx-auto">
                     <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
                         <div class="flex flex-col gap-6">
-                            <h2 class="text-3xl font-bold text-slate-900">The Solution</h2>
+                            <h2 class="text-3xl section-title text-slate-900">The Solution</h2>
                             <div class="prose text-slate-600">
                                 <p>NTT DATA implemented a comprehensive smart manufacturing solution that integrated IoT sensors throughout the production line, connected to an advanced analytics platform. This system provided real-time monitoring of equipment performance, product quality, and production metrics.</p>
                                 <p>We deployed AI-powered predictive maintenance algorithms that could anticipate equipment failures before they occurred, allowing for scheduled maintenance during planned downtime. The solution also included automated quality control systems using computer vision and machine learning.</p>
@@ -90,7 +90,7 @@
                             <img src="../images/processes/manufacturing/achievements.jpg" alt="Manufacturing achievements visualization" class="w-full h-full object-cover"/>
                         </div>
                         <div class="flex flex-col gap-6">
-                            <h2 class="text-3xl font-bold text-slate-900">Key Achievements</h2>
+                            <h2 class="text-3xl section-title text-slate-900">Key Achievements</h2>
                             <div class="prose text-slate-600">
                                 <ul class="space-y-4">
                                     <li class="flex items-start gap-3">
