--- a/processes/manufacturing-cpg/manufacturing/smart-manufacturing.html
+++ b/processes/manufacturing-cpg/manufacturing/smart-manufacturing.html
@@ -69,7 +69,7 @@
                                 </li>
                             </ol>
                         </nav>
-                        <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold leading-tight tracking-tight">Smart Manufacturing Process</h1>
+                        <h1 class="text-4xl sm:text-5xl md:text-6xl page-title leading-tight tracking-tight">Smart Manufacturing Process</h1>
                         <p class="text-xl text-slate-300 max-w-3xl">Optimize manufacturing operations through digitalization and automation, integrating IoT devices, AI-driven analytics, and real-time monitoring for improved efficiency and quality.</p>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
             <!-- Success Stories -->
             <section class="py-8 sm:py-10 md:py-12 px-6 sm:px-10 bg-slate-50">
                 <div class="max-w-6xl mx-auto">
-                    <h2 class="text-slate-900 text-3xl sm:text-4xl font-bold leading-tight tracking-tight mb-8">Success Stories</h2>
+                    <h2 class="text-slate-900 text-3xl sm:text-4xl section-title leading-tight tracking-tight mb-8">Success Stories</h2>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                         <!-- Success Story Card 1 -->
                         <a href="../../../success-stories/automotive-manufacturing-success.html" class="block">
@@ -169,7 +169,7 @@
             <!-- Use Cases -->
             <section class="py-8 sm:py-10 md:py-12 px-6 sm:px-10">
                 <div class="max-w-6xl mx-auto">
-                    <h2 class="text-slate-900 text-3xl sm:text-4xl font-bold leading-tight tracking-tight mb-8">Use Cases</h2>
+                    <h2 class="text-slate-900 text-3xl sm:text-4xl section-title leading-tight tracking-tight mb-8">Use Cases</h2>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                         <!-- Use Case Card 1 -->
                         <div class="flex flex-col gap-4 rounded-xl border border-slate-200 bg-white p-6 shadow-lg hover:shadow-xl transition-shadow duration-300">
