feat: changed some tiltes

--- a/industries/index.html
+++ b/industries/index.html
@@ -137,7 +137,7 @@
       <div class="layout-content-container flex flex-col max-w-5xl flex-1">
         <!-- Industries Header -->
         <section class="mb-12 text-center">
-          <h1 class="text-4xl font-bold tracking-tight text-[#111418] sm:text-5xl">Industries</h1>
+          <h1 class="page-title">Industries</h1>
           <p class="mt-4 text-lg leading-8 text-gray-600">Explore how NTT DATA Spain is transforming various industries with innovative solutions.</p>
         </section>
 
