--- a/solutions/index.html
+++ b/solutions/index.html
@@ -190,7 +190,7 @@
       <div class="layout-content-container">
         <!-- Header -->
         <section class="mb-12 text-center">
-          <h1 class="text-4xl font-bold tracking-tight text-[#111418] sm:text-5xl">Solutions</h1>
+          <h1 class="page-title">Solutions</h1>
           <p class="mt-4 text-lg leading-8 text-gray-600">Discover our comprehensive portfolio of solutions across industries</p>
         </section>
 
