--- a/industries/manufacturing-cpg/index.html
+++ b/industries/manufacturing-cpg/index.html
@@ -71,7 +71,7 @@
         <div class="layout-content-container flex flex-col max-w-5xl flex-1">
           <!-- Industry Header -->
           <section class="mb-8">
-            <h1 class="text-4xl font-bold tracking-tight text-[#111418] sm:text-5xl mb-4">Manufacturing & Consumer Packaged Goods</h1>
+            <h1 class="industry-title">Manufacturing & Consumer Packaged Goods</h1>
             <p class="text-lg text-gray-600">
               Explore our innovative solutions for manufacturing, agriculture, consumer packaged goods, and natural resources.
             </p>
@@ -79,7 +79,7 @@
 
           <!-- Sectors Grid -->
           <section class="mb-12">
-            <h2 class="text-2xl font-bold text-gray-900 mb-6">Industry Sectors</h2>
+            <h2 class="section-title">Industry Sectors</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
               <a href="./manufacturing/index.html" class="block">
                 <div class="bg-white p-6 rounded-lg shadow-lg hover:shadow-xl transition-shadow">
@@ -125,7 +125,7 @@
 
           <!-- Features Section -->
           <section class="mb-12">
-            <h2 class="text-2xl font-bold text-gray-900 mb-6">Key Features</h2>
+            <h2 class="section-title">Key Features</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
               <div class="bg-white p-6 rounded-lg shadow-lg">
                 <div class="flex items-center mb-4">
@@ -155,7 +155,7 @@
 
           <!-- Call to Action -->
           <section class="bg-gray-50 rounded-xl p-8 text-center">
-            <h2 class="text-2xl font-bold text-gray-900 mb-4">Ready to Transform Your Operations?</h2>
+            <h2 class="section-title">Ready to Transform Your Operations?</h2>
             <p class="text-gray-600 mb-6">Contact us to learn more about our manufacturing and CPG solutions.</p>
             <button class="bg-[#1672ce] text-white px-8 py-3 rounded-lg font-semibold hover:bg-blue-700 transition-colors">
               Request a Demo
