Cambiado título de las páginas y algunos estilos

--- a/header.html
+++ b/header.html
@@ -11,6 +11,7 @@
   <div class="flex items-center gap-8">
     <a class="text-slate-700 hover:text-[#1672ce] text-sm font-medium leading-normal transition-colors" href="/industries">Industries</a>
     <a class="text-slate-700 hover:text-[#1672ce] text-sm font-medium leading-normal transition-colors" href="/solutions">Solutions</a>
+    <a class="text-slate-700 hover:text-[#1672ce] text-sm font-medium leading-normal transition-colors" href="/events.html">Events</a>
     <a class="text-slate-700 hover:text-[#1672ce] text-sm font-medium leading-normal transition-colors" href="/contactus.html">Contact Us</a>
   </div>
 </nav>
