--- a/industries/index.html
+++ b/industries/index.html
@@ -5,7 +5,7 @@
   <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect" />
   <link as="style" href="https://fonts.googleapis.com/css2?display=swap&family=Noto+Sans%3Awght%40400%3B500%3B700%3B900&family=Work+Sans%3Awght%40400%3B500%3B600%3B700%3B800" onload="this.rel='stylesheet'" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet" />
-  <title>NTT DATA Demo Center - Industries</title>
+  <title>NTT DATA Industry Demo Center - Industries</title>
   <link href="../styles/main.css" rel="stylesheet" />
   <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
@@ -137,7 +137,7 @@
       <div class="layout-content-container flex flex-col max-w-5xl flex-1">
         <!-- Industries Header -->
         <section class="mb-12 text-center">
-          <h1 class="text-4xl font-bold tracking-tight text-[#111418] sm:text-5xl">Industries</h1>
+          <h1 class="text-4xl @[480px]:text-5xl @[768px]:text-6xl font-extrabold leading-tight tracking-tighter font-['Noto_Serif']">Industries</h1>
           <p class="mt-4 text-lg leading-8 text-gray-600">Explore how NTT DATA Spain is transforming various industries with innovative solutions.</p>
         </section>
 
@@ -230,7 +230,7 @@
             <a href="./manufacturing-cpg/index.html" class="group flex flex-col @xl:flex-row items-stretch justify-start rounded-xl shadow-lg bg-white overflow-hidden transition-all duration-300 hover:shadow-xl hover:scale-[1.02]">
               <div class="w-full @xl:w-2/5 aspect-video bg-cover bg-center rounded-t-xl @xl:rounded-l-xl @xl:rounded-t-none" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAGBNtzHgybPmlpNMK9Tqvh0Z7U3qNuuAufONEjjtCMzXsTSu9WXEqHW9a7xystQtC8zO_AHvyamfswP7XjVXqJCqnGgBe0Z1V3a2lKZk4S-neGfFf7LqpcQ6HNzeJy8UrXDQOgGTwY_N-PrRtPxRJnl8KGTCjdhBElugmwbzQVbP9hzap8UYSGGdZKiA6xPXdK6thelu4CtKidPJBJjLgAoeFmViAuhSxFgJGSy_fDYYEmc8wppDOLQTbzyEw93jZv-5GFfHPeIRw")'></div>
               <div class="flex w-full @xl:w-3/5 grow flex-col items-start justify-center gap-3 p-6 @xl:p-8">
-                <h2 class="text-2xl font-semibold text-[#111418] leading-tight">Manufacturing & Consumer Packaged Goods</h2>
+                <h2 class="text-2xl font-semibold text-[#111418] leading-tight  font-['Noto_Serif']">Manufacturing & Consumer Packaged Goods</h2>
                 <p class="text-[#637588] text-base font-normal leading-relaxed mb-2">
                   Digital solutions for manufacturing, agriculture, consumer goods, and natural resources.
                 </p>
@@ -241,7 +241,7 @@
             <a href="./travel-transportation-logistics/index.html" class="group flex flex-col @xl:flex-row items-stretch justify-start rounded-xl shadow-lg bg-white overflow-hidden transition-all duration-300 hover:shadow-xl hover:scale-[1.02]">
               <div class="w-full @xl:w-2/5 aspect-video bg-cover bg-center rounded-t-xl @xl:rounded-l-xl @xl:rounded-t-none" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuD8OmL0IbOuAhESBaGOadpeuGCAuBqOwiroevsIdPF9J4iknZqZhjcO4LHlKf2iaojgGUY9_Ue_cJSRG7W-WadnODUQ0fk4-Ly52NPzQh6u2vPIyl8mxFXjQgD8OCfCYfzUB2zzdLs27lvkyeXdjE-lqhuspJCA411R2SG6WFFkhCBaWOR8e_hSSl7iz8eAEYSs39vZPCCpa_5RpH4Y1i80AH6wlZuFsxOvh5NPgNhgUvt18__Q23iXAYeoR4cxkIRcnzaC0Yb69ag")'></div>
               <div class="flex w-full @xl:w-3/5 grow flex-col items-start justify-center gap-3 p-6 @xl:p-8">
-                <h2 class="text-2xl font-semibold text-[#111418] leading-tight">Travel, Transportation & Logistics</h2>
+                <h2 class="text-2xl font-semibold text-[#111418] leading-tightn font-['Noto_Serif']">Travel, Transportation & Logistics</h2>
                 <p class="text-[#637588] text-base font-normal leading-relaxed mb-2">
                   Comprehensive solutions for airlines, transportation, tourism, infrastructure, and logistics services.
                 </p>
@@ -252,7 +252,7 @@
             <a href="./lifesciences-pharma/index.html" class="group flex flex-col @xl:flex-row items-stretch justify-start rounded-xl shadow-lg bg-white overflow-hidden transition-all duration-300 hover:shadow-xl hover:scale-[1.02]">
               <div class="w-full @xl:w-2/5 aspect-video bg-cover bg-center rounded-t-xl @xl:rounded-l-xl @xl:rounded-t-none" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDsfDIxe6yfklOxeH-_FzE_soBcypZjmu5LTrmQMoMQFYtLeURt0YNvg4IM81em8IItFiYmCIK7qhryIivfc4FtwxAJciClfStKFidpdxHf9cD4tgSnxwtvTIxygpHT_yz07NG7BZUzr4EXQeuSXFHpsLzs_BBSdaETlF-00YGtrGC-poeeBbrWB0SZ8nTRiYAVBhq64MI8vZee47yzvlXek5L2lWQinZ5o_5pPuba3uNuIFh7m6s97VAcH7syFaZ5hGJ6bPHqUubI")'></div>
               <div class="flex w-full @xl:w-3/5 grow flex-col items-start justify-center gap-3 p-6 @xl:p-8">
-                <h2 class="text-2xl font-semibold text-[#111418] leading-tight">Life Sciences & Pharma</h2>
+                <h2 class="text-2xl font-semibold text-[#111418] leading-tight font-['Noto_Serif']">Life Sciences & Pharma</h2>
                 <p class="text-[#637588] text-base font-normal leading-relaxed mb-2">
                   Innovative solutions for pharmaceutical companies and healthcare organizations, enhancing research and development processes.
                 </p>
@@ -263,7 +263,7 @@
             <a href="./retail/index.html" class="group flex flex-col @xl:flex-row items-stretch justify-start rounded-xl shadow-lg bg-white overflow-hidden transition-all duration-300 hover:shadow-xl hover:scale-[1.02]">
               <div class="w-full @xl:w-2/5 aspect-video bg-cover bg-center rounded-t-xl @xl:rounded-l-xl @xl:rounded-t-none" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCCdUejylbgTVEUVJhMnk1Qvp49Jgsm5HByrNxWYktdTgw217RY5hSkD2aWtGqvFXjT225y-f0y086i4kEwQ6wNI0i_qiQPJU46-fLyDbnfav-mHhmxOSNy2EbvGaNb7nj8yUqTmFiHT_WFMdJCftkL0EfvGg-NC5KMeU9ElmxoJcRtmdrrSrCsycFlVnI8Sek-Ww2nU9GgOD6pZBvLmlHlk0z9bjdE_S_vQ-GvlvtYx6a4NA_Qdx505iS_DhnYy5G4FnASAv40R_I")'></div>
               <div class="flex w-full @xl:w-3/5 grow flex-col items-start justify-center gap-3 p-6 @xl:p-8">
-                <h2 class="text-2xl font-semibold text-[#111418] leading-tight">Retail</h2>
+                <h2 class="text-2xl font-semibold text-[#111418] leading-tight font-['Noto_Serif']">Retail</h2>
                 <p class="text-[#637588] text-base font-normal leading-relaxed mb-2">
                   Transform the retail experience with our cutting-edge solutions for modern commerce and customer engagement.
                 </p>
@@ -274,7 +274,7 @@
             <a href="./auto/index.html" class="group flex flex-col @xl:flex-row items-stretch justify-start rounded-xl shadow-lg bg-white overflow-hidden transition-all duration-300 hover:shadow-xl hover:scale-[1.02]">
               <div class="w-full @xl:w-2/5 aspect-video bg-cover bg-center rounded-t-xl @xl:rounded-l-xl @xl:rounded-t-none" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCUAbP3zWWntBRQMwSY7AeqGsRZk8iDpcm2zn6rVQk1tXLuzn1soOYUfce5Fj--FsS4LDQN5sRFT1zQWryUQ27TRy-6tRyxMQwjtcRvD7q7E7Q52jm2bBXp3vALKAZ1YFytLHA6Wgp9PmJWZ3yGIe7PWlEQ3piTzRcQzigNM1Uis4Ow8ZcGnw6n_RD0Y6JIWtRfy16fyOLFmoeWrOmPowWpHhiB6MFEqYMg14R_e_MtJE-H6vsu7_e0Jp_wKIjlJpBoFwCImLMVYj4")'></div>
               <div class="flex w-full @xl:w-3/5 grow flex-col items-start justify-center gap-3 p-6 @xl:p-8">
-                <h2 class="text-2xl font-semibold text-[#111418] leading-tight">Auto</h2>
+                <h2 class="text-2xl font-semibold text-[#111418] leading-tight font-['Noto_Serif']">Auto</h2>
                 <p class="text-[#637588] text-base font-normal leading-relaxed mb-2">
                   Advanced solutions for the automotive industry, from manufacturing to connected vehicle technologies.
                 </p>
@@ -285,7 +285,7 @@
             <a href="./energy-utilities/index.html" class="group flex flex-col @xl:flex-row items-stretch justify-start rounded-xl shadow-lg bg-white overflow-hidden transition-all duration-300 hover:shadow-xl hover:scale-[1.02]">
               <div class="w-full @xl:w-2/5 aspect-video bg-cover bg-center rounded-t-xl @xl:rounded-l-xl @xl:rounded-t-none" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBX8JYm_bwIqwPmie3JqCCqqN2cDoZ8v6KfWBPUJEM8YzfmysK5vjE0jYm4Vp5jpGEhoNejhCTa4uf1rSiQz7P4X9UB6LRXuN6qJCUtZY526LUij40IeHQdE0c9ryLzkBUzOYndGfw7wuH6XHmONLvRAGf49R2jWA_jbXyZLXw-HZ27z3zD5m4ZDjPlRh97a9K3DMyIIrk4bTJKAe-tctaybAn48EMQYrw0G1vXadaFb-XWtASP_AIMWb_1q-Hv31PyacguFvSnpv0")'></div>
               <div class="flex w-full @xl:w-3/5 grow flex-col items-start justify-center gap-3 p-6 @xl:p-8">
-                <h2 class="text-2xl font-semibold text-[#111418] leading-tight">Energy & Utilities</h2>
+                <h2 class="text-2xl font-semibold text-[#111418] leading-tight font-['Noto_Serif']">Energy & Utilities</h2>
                 <p class="text-[#637588] text-base font-normal leading-relaxed mb-2">
                   Smart solutions for energy companies and utilities, enabling digital transformation and operational efficiency.
                 </p>
