--- a/contactus.html
+++ b/contactus.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <title>NTT DATA Spain Demo Center - Contact Us</title>
+    <title>NTT DATA Industry Demo Center - Contact Us</title>
     <link href="data:image/x-icon;base64," rel="icon" type="image/x-icon"/>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
@@ -37,7 +37,7 @@
 <main class="px-4 sm:px-8 md:px-16 lg:px-24 xl:px-40 flex flex-1 justify-center py-8 bg-gray-50">
 <div class="layout-content-container flex flex-col max-w-5xl flex-1 space-y-8">
 <section class="text-center">
-<h1 class="text-gray-900 tracking-tight text-4xl font-bold leading-tight">Contact Our Demo Center</h1>
+<h1 class="text-gray-900 tracking-tight text-4xl font-bold leading-tight font-['Noto_Serif']">Contact our Demo Center</h1>
 <p class="text-gray-600 text-lg font-normal leading-relaxed mt-4 max-w-3xl mx-auto">
                 We're here to help. Reach out to us with any questions or inquiries about our technological solutions. We'll get back to you promptly.
               </p>
