--- a/industries/manufacturing-cpg/index.html
+++ b/industries/manufacturing-cpg/index.html
@@ -5,7 +5,7 @@
   <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect" />
   <link as="style" href="https://fonts.googleapis.com/css2?display=swap&family=Noto+Sans%3Awght%40400%3B500%3B700%3B900&family=Work+Sans%3Awght%40400%3B500%3B600%3B700%3B800" onload="this.rel='stylesheet'" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet" />
-  <title>NTT DATA Demo Center - Manufacturing & CPG</title>
+  <title>NTT DATA Industry Demo Center - Manufacturing & CPG</title>
   <link href="../../styles/main.css" rel="stylesheet" />
   <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
@@ -71,7 +71,7 @@
         <div class="layout-content-container flex flex-col max-w-5xl flex-1">
           <!-- Industry Header -->
           <section class="mb-8">
-            <h1 class="text-4xl font-bold tracking-tight text-[#111418] sm:text-5xl mb-4">Manufacturing & Consumer Packaged Goods</h1>
+            <h1 class="text-4xl font-bold tracking-tight text-[#111418] sm:text-5xl mb-4 font-['Noto_Serif']">Manufacturing & Consumer Packaged Goods</h1>
             <p class="text-lg text-gray-600">
               Explore our innovative solutions for manufacturing, agriculture, consumer packaged goods, and natural resources.
             </p>
