--- a/industries/manufacturing-cpg/manufacturing/index.html
+++ b/industries/manufacturing-cpg/manufacturing/index.html
@@ -63,7 +63,7 @@
                                 </li>
                             </ol>
                         </nav>
-                        <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold leading-tight tracking-tight">Manufacturing Solutions</h1>
+                        <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold leading-tight tracking-tight font-['Noto_Serif']">Manufacturing Solutions</h1>
                         <p class="text-xl text-slate-300 max-w-3xl">Drive digital transformation in manufacturing with our innovative solutions that enhance efficiency, quality, and productivity through the following processes:</p>
                     </div>
                 </div>
