--- a/industries/retail/verticals/supplychain/index.html
+++ b/industries/retail/verticals/supplychain/index.html
@@ -5,7 +5,7 @@
   <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect" />
   <link as="style" href="https://fonts.googleapis.com/css2?display=swap&family=Noto+Sans%3Awght%40400%3B500%3B700%3B900&family=Work+Sans%3Awght%40400%3B500%3B600%3B700%3B800" onload="this.rel='stylesheet'" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet" />
-  <title>NTT DATA Demo Center - Retail Supply Chain Management</title>
+  <title>NTT DATA Industry Demo Center - Retail Supply Chain Management</title>
   <link href="data:image/x-icon;base64," rel="icon" type="image/x-icon" />
   <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
