Corregido diorama y títulos principales

--- a/header.html
+++ b/header.html
@@ -4,6 +4,9 @@
   <a href="/home.html">
     <img src="/images/GlobalLogo_NTTDATA_FutureBlue_RGB.svg" alt="NTT DATA" class="w-40 md:w-48" />
   </a>
+  <div class="text-slate-900 text-3xl @[480px]:text-4xl font-bold font-['Noto_Serif']">
+    Industry Demo Center
+  </div>
 </div>
 
 <!-- Navigation Section (Center) -->
@@ -12,6 +15,7 @@
     <a class="text-slate-700 hover:text-[#1672ce] text-sm font-medium leading-normal transition-colors" href="/industries">Industries</a>
     <a class="text-slate-700 hover:text-[#1672ce] text-sm font-medium leading-normal transition-colors" href="/solutions">Solutions</a>
     <a class="text-slate-700 hover:text-[#1672ce] text-sm font-medium leading-normal transition-colors" href="/events.html">Events</a>
+<a class="text-slate-700 hover:text-[#1672ce] text-sm font-medium leading-normal transition-colors" href="/livinglab.html">Living Lab</a>
     <a class="text-slate-700 hover:text-[#1672ce] text-sm font-medium leading-normal transition-colors" href="/contactus.html">Contact Us</a>
   </div>
 </nav>
