--- a/processes/manufacturing-cpg/manufacturing/smart-manufacturing.html
+++ b/processes/manufacturing-cpg/manufacturing/smart-manufacturing.html
@@ -69,7 +69,7 @@
                                 </li>
                             </ol>
                         </nav>
-                        <h1 class="text-4xl sm:text-5xl md:text-6xl page-title leading-tight tracking-tight">Smart Manufacturing Process</h1>
+                        <h1 class="text-white text-4xl sm:text-5xl md:text-6xl page-title leading-tight tracking-tight">Smart Manufacturing Process</h1>
                         <p class="text-xl text-slate-300 max-w-3xl">Optimize manufacturing operations through digitalization and automation, integrating IoT devices, AI-driven analytics, and real-time monitoring for improved efficiency and quality.</p>
                     </div>
                 </div>
