--- a/events.html
+++ b/events.html
@@ -34,7 +34,7 @@
     <section class="relative text-center bg-cover bg-center py-16 md:py-24 rounded-xl shadow-lg overflow-hidden" style="background-image: url('/images/city-dioram.jpg');">
         <div class="absolute inset-0 bg-black opacity-50"></div> <!-- Overlay for better text readability -->
         <div class="relative z-10">
-            <h1 class="text-white tracking-tight text-4xl font-bold leading-tight">Upcoming Events</h1>
+            <h1 class="text-white tracking-tight text-4xl font-bold leading-tight font-['Noto_Serif']">Upcoming Events</h1>
             <p class="text-gray-200 text-lg font-normal leading-relaxed mt-4 max-w-3xl mx-auto">
                 Join us for our upcoming webinars, workshops, and exclusive events. Discover the latest in technology and innovation with NTT DATA.
             </p>
