--- a/industries/index.html
+++ b/industries/index.html
@@ -80,8 +80,10 @@
             max-width: 250px;
             transform: translate(-50%, -10px);
             transition: all 0.2s ease-in-out;
-            opacity: 0;
-            visibility: hidden;
+            /* opacity: 0;
+            visibility: hidden; */
+            opacity: 1;
+            visibility: visible;
         }
 
         .hotspot:hover .tooltip {
@@ -144,23 +146,23 @@
         <!-- Interactive Map -->
         <section class="mb-16 relative">
           <div class="interactive-map-container relative max-w-4xl mx-auto mb-12">
-            <img src="../images/city-dioram.png" alt="Industry Map" class="w-full h-auto rounded-xl shadow-lg">
+            <img src="../images/city-dioram2.png" alt="Industry Map" class="w-full h-auto rounded-xl shadow-lg">
             
             <!-- Hotspots -->
 
-            <a href="./travel-transportation-logistics/index.html" class="hotspot group absolute top-[15%] left-[18%]">
+            <a href="./travel-transportation-logistics/index.html" class="hotspot group absolute top-[82%] left-[14%]">
                 <div class="ping-circle">
                     <div class="ping-effect"></div>
                     <div class="dot"></div>
                 </div>
                 <div class="tooltip bg-white p-3 rounded-lg shadow-lg absolute bottom-full mb-2 text-sm">
                     <strong>Travel & Transportation</strong>
-                    <p class="text-gray-600">Solutions for airlines, transportation, and logistics services</p>
+                    <p class="text-xs text-gray-600">Solutions for airlines, transportation, and logistics services</p>
                 </div>
                 <span class="hotspot-trigger"></span>
             </a>
 
-            <a href="./manufacturing-cpg/index.html" class="hotspot group absolute bottom-[35%] right-[35%]">
+            <a href="./manufacturing-cpg/index.html" class="hotspot group absolute bottom-[25%] right-[10%]">
                 <div class="ping-circle">
                     <div class="ping-effect"></div>
                     <div class="dot"></div>
@@ -172,7 +174,7 @@
                 <span class="hotspot-trigger"></span>
             </a>
 
-            <div class="hotspot absolute top-[25%] right-[25%] group">
+            <div class="hotspot absolute top-[30%] right-[34%] group">
                 <div class="hotspot-trigger rounded-full"></div>
                 <div class="ping-circle">
                     <div class="ping-effect"></div>
@@ -180,11 +182,11 @@
                 </div>
                 <div class="tooltip bg-white p-3 rounded-lg shadow-lg absolute bottom-full mb-2 text-sm">
                     <strong>Life Sciences & Pharma</strong>
-                    <p class="text-gray-600">Innovative solutions for healthcare and pharmaceutical industries.</p>
+                    <p class="text-xs text-gray-600">Innovative solutions for healthcare and pharmaceutical industries.</p>
                 </div>
             </div>
 
-            <div class="hotspot absolute top-[35%] left-[28%] group">
+            <div class="hotspot absolute top-[35%] left-[18%] group">
                 <div class="hotspot-trigger rounded-full"></div>
                 <div class="ping-circle">
                     <div class="ping-effect"></div>
@@ -192,11 +194,11 @@
                 </div>
                 <div class="tooltip bg-white p-3 rounded-lg shadow-lg absolute bottom-full mb-2 text-sm">
                     <strong>Retail</strong>
-                    <p class="text-gray-600">Digital transformation solutions for modern retail experiences.</p>
+                    <p class="text-xs text-gray-600">Digital transformation solutions for modern retail experiences.</p>
                 </div>
             </div>
 
-            <a href="./auto/index.html" class="hotspot group absolute bottom-[45%] left-[38%]">
+            <a href="./auto/index.html" class="hotspot group absolute bottom-[35%] left-[49%]">
                 <div class="ping-circle">
                     <div class="ping-effect"></div>
                     <div class="dot"></div>
@@ -208,7 +210,7 @@
                 <span class="hotspot-trigger"></span>
             </a>
 
-            <a href="./energy-utilities/index.html" class="hotspot group absolute bottom-[25%] right-[18%]">
+            <a href="./energy-utilities/index.html" class="hotspot group absolute bottom-[83%] right-[5%]">
                 <div class="ping-circle">
                     <div class="ping-effect"></div>
                     <div class="dot"></div>
