--- a/solutions/supply-chain-management/index.html
+++ b/solutions/supply-chain-management/index.html
@@ -65,7 +65,7 @@
       </div>
       <div class="absolute inset-0 flex items-center">
         <div class="max-w-6xl mx-auto px-6 sm:px-10 text-white">
-          <h1 class="text-4xl md:text-5xl font-bold mb-4">Supply Chain Management</h1>
+          <h1 class="text-4xl md:text-5xl font-bold mb-4 font-['Noto_Serif']">Supply Chain Management</h1>
           <p class="text-xl md:text-2xl font-light max-w-3xl text-slate-200">End-to-end supply chain optimization and visibility solutions for modern retail operations</p>
         </div>
       </div>
