Actualización parcial. Imágenes de stock

--- a/success-stories/automotive-manufacturing-success.html
+++ b/success-stories/automotive-manufacturing-success.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <link href="https://fonts.gstatic.com/" rel="preconnect" crossorigin/>
     <link href="https://fonts.googleapis.com/css2?display=swap&family=Noto+Sans%3Awght%40400%3B500%3B700%3B900&family=Work+Sans%3Awght%40400%3B500%3B600%3B700%3B800%3B900" rel="stylesheet" as="style" onload="this.rel='stylesheet'"/>
-    <title>Global Automotive Manufacturer Success Story - NTT DATA Demo Center</title>
+    <title>NTT DATA Industry Demo Center</title>
     <link href="data:image/x-icon;base64," rel="icon" type="image/x-icon"/>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
@@ -31,6 +31,45 @@
         </script>
 
         <main class="flex-1">
+            <!-- Enhanced Breadcrumb -->
+            <div class="bg-gradient-to-b from-slate-900 to-slate-800 text-white">
+                <div class="max-w-6xl mx-auto px-6 sm:px-10">
+                    <nav class="flex py-4" aria-label="Breadcrumb">
+                        <ol class="inline-flex items-center space-x-1 md:space-x-3">
+                            <li class="inline-flex items-center">
+                                <a href="../../../home.html" class="inline-flex items-center text-sm font-medium text-slate-200 hover:text-white transition-colors">
+                                    <span class="material-symbols-outlined mr-2">home</span>
+                                    Home
+                                </a>
+                            </li>
+                            <li>
+                                <div class="flex items-center">
+                                    <span class="material-symbols-outlined text-slate-400 mx-1" style="font-size: 1.25rem;">chevron_right</span>
+                                    <a href="../../../industries/index.html" class="ml-1 text-sm font-medium text-slate-200 hover:text-white transition-colors">Industries</a>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="flex items-center">
+                                    <span class="material-symbols-outlined text-slate-400 mx-1" style="font-size: 1.25rem;">chevron_right</span>
+                                    <a href="../../../industries/manufacturing-cpg/index.html" class="ml-1 text-sm font-medium text-slate-200 hover:text-white transition-colors">Manufacturing & CPG</a>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="flex items-center">
+                                    <span class="material-symbols-outlined text-slate-400 mx-1" style="font-size: 1.25rem;">chevron_right</span>
+                                    <a href="../../../industries/manufacturing-cpg/manufacturing/index.html" class="ml-1 text-sm font-medium text-slate-200 hover:text-white transition-colors">Manufacturing</a>
+                                </div>
+                            </li>
+                            <li aria-current="page">
+                                <div class="flex items-center">
+                                    <span class="material-symbols-outlined text-slate-400 mx-1" style="font-size: 1.25rem;">chevron_right</span>
+                                    <span class="ml-1 text-sm font-medium text-slate-400">Smart Manufacturing Process</span>
+                                </div>
+                            </li>
+                        </ol>
+                    </nav>
+                </div>
+            </div>
             <!-- Hero Section -->
             <div class="hero-section">
                 <img src="../images/processes/manufacturing/automotive-success.jpg" alt="Automotive manufacturing plant"/>
