--- a/events.html
+++ b/events.html
@@ -31,7 +31,7 @@
 <main class="px-4 sm:px-8 md:px-16 lg:px-24 xl:px-40 flex flex-1 justify-center py-8 bg-gray-50">
 <div class="layout-content-container flex flex-col max-w-5xl flex-1 space-y-8">
     <!-- Hero Section -->
-    <section class="relative text-center bg-cover bg-center py-16 md:py-24 rounded-xl shadow-lg overflow-hidden" style="background-image: url('/images/city-dioram.jpg');">
+    <section class="relative text-center bg-cover bg-center py-16 md:py-24 rounded-xl shadow-lg overflow-hidden" style="background-image: url('/images/events.jpg');">
         <div class="absolute inset-0 bg-black opacity-50"></div> <!-- Overlay for better text readability -->
         <div class="relative z-10">
             <h1 class="text-white tracking-tight text-4xl font-bold leading-tight font-['Noto_Serif']">Upcoming Events</h1>
