Añadidas imágenes para soluciones

--- a/solutions/index.html
+++ b/solutions/index.html
@@ -49,7 +49,7 @@
             description: 'End-to-end supply chain optimization and visibility platform',
             industry: 'retail',
             vertical: '',
-            image: 'https://placehold.co/600x400?text=Supply+Chain',
+            image: '/images/solutions/supplychain.jpg',
             recordings: 2,
             whitepapers: 1
           },
@@ -59,7 +59,7 @@
             description: 'AI-powered manufacturing optimization and predictive maintenance',
             industry: 'manufacturing-cpg',
             vertical: 'Manufacturing',
-            image: 'https://placehold.co/600x400?text=Smart+Manufacturing',
+            image: '/images/solutions/smartmanufacturing.jpg',
             recordings: 3,
             whitepapers: 2
           },
@@ -69,7 +69,7 @@
             description: 'Smart grid optimization and renewable energy integration',
             industry: 'energy-utilities',
             vertical: 'Energy',
-            image: 'https://placehold.co/600x400?text=Grid+Management',
+            image: '/images/solutions/gridmanagement.jpg',
             recordings: 1,
             whitepapers: 3
           },
@@ -79,7 +79,7 @@
             description: 'Digital transformation of clinical trials processes',
             industry: 'lifesciences-pharma',
             vertical: '',
-            image: 'https://placehold.co/600x400?text=Clinical+Trials',
+            image: '/images/solutions/clinicaltrials.jpg',
             recordings: 2,
             whitepapers: 2
           },
