--- a/solutions/supply-chain-management/index.html
+++ b/solutions/supply-chain-management/index.html
@@ -61,7 +61,7 @@
     <!-- Hero Section -->
     <section class="relative bg-gradient-to-b from-slate-900 to-slate-800">
       <div class="h-[400px] w-full overflow-hidden">
-        <img src="https://placehold.co/1920x400" alt="Supply Chain Management" class="w-full h-full object-cover opacity-50">
+        <img src="/images/solutions/supplychain.jpg" alt="Supply Chain Management" class="w-full h-full object-cover opacity-50">
       </div>
       <div class="absolute inset-0 flex items-center">
         <div class="max-w-6xl mx-auto px-6 sm:px-10 text-white">
